# comrade-colonel-bot

./: .dockerignore  .eslintrc  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  kubernetes-deployment.yml  kubernetes.yml  package-lock.json  package.json
src/: config.rs  main.rs  storage.rs
test/: index.test.js
test/utils/: index.js  misc.js  storage.js  telegram.js
